k8s/podslb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-1
  labels:
    app: hello
spec:
  containers:
    - name: hello
      image: soumyamohanty27/drivers-app
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-2
  labels:
    app: myapp
spec:
  containers:
    - name: myapp
      image: soumyamohanty27/drivers-app
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-3
  labels:
    app: myapp
spec:
  containers:
    - name: myapp
      image: soumyamohanty27/drivers-app
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
